Fixed code smells (#68)
Co-authored-by: DeepaMittal <deepamittalmca@gmail.com>